--- a/README.rdoc
+++ b/README.rdoc
@@ -11,7 +11,7 @@ Additional directory, sql, contains a file schema.sql which includes a MySQL scr
 1. The GUI was not implement as an html widget as it should be, due to difficulties in connecting rails 3 to bootstrap and angular.
 2. As a result of 1, there are some responsive issues.
 3. Application behavior issues:
-3.1 The 'display once' requirement - the specifications state that every follower and unfollower are displayed only once unless they change status. This creates(undesirable?) a side effect that whenever an action (such as dismiss) is taken the screen is refreshed. On the refresh screen all the previously displayed followers are replaced by new ones.
+The 'display once' requirement - the specifications state that every follower and unfollower are displayed only once unless they change status. This creates(undesirable?) a side effect that whenever an action (such as dismiss) is taken the screen is refreshed. On the refresh screen all the previously displayed followers are replaced by new ones.
 
 Uri
 
